Fixed gap

--- a/src/components/Pages/HomeSections/featuresSection/featuresSection.module.scss
+++ b/src/components/Pages/HomeSections/featuresSection/featuresSection.module.scss
@@ -139,7 +139,7 @@ $breakpoint-xsmall: 375px;
 // min-width 576px and max-width: 768px
 @media screen and (min-width: $breakpoint-small) and (max-width: $breakpoint-medium) {
     .wrapper {
-        gap: 0.1rem;
+        gap: 3rem;
         padding-bottom: 16rem;
         flex-direction: column;
 
